2005-11-28  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #317322
	* gui/e-calendar-view.c:
	(e_calendar_view_delete_selected_occurrence): Do not
	set a new rid if the component already has it. If an 
	instance is removed from master component, send a modify
	request setting the exception for that instance. Cleaned
	up the code.
	
2005-11-28  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #314639
	* gui/e-calendar-view.c: 
	(e_calendar_view_new_appointment_for): Check if the default
	client is loaded before creating the appointment.

2005-11-28  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #318777
	* gui/e-cal-model.c: 
	(add_instance_cb): Set the instance start as the started date for
	the recurring instance.
	(e_cal_view_objects_added_cb): 
	(e_cal_view_objects_removed_cb): Check if the comp_data is removed
	from the array before freeing the data.

2005-11-26  Tor Lillqvist  <tml@novell.com>

	* gui/calendar-commands.c
	* gui/e-cal-list-view.c
	* gui/e-calendar-table.c
	* gui/e-memo-table.c
	* gui/e-memos.c
	* gui/e-tasks.c
	* gui/gnome-cal.c
	* gui/goto.c
	* gui/memos-control.c
	* gui/tasks-control.c
	* gui/alarm-notify/alarm-notify-dialog.c
	* gui/alarm-notify/notify-main.c
	* gui/dialogs/alarm-dialog.c
	* gui/dialogs/alarm-list-dialog.c
	* gui/dialogs/cal-attachment.c
	* gui/dialogs/cal-prefs-dialog.c
	* gui/dialogs/comp-editor.c
	* gui/dialogs/e-delegate-dialog.c
	* gui/dialogs/event-editor.c
	* gui/dialogs/event-page.c
	* gui/dialogs/meeting-page.c
	* gui/dialogs/memo-page.c
	* gui/dialogs/recurrence-page.c
	* gui/dialogs/schedule-page.c
	* gui/dialogs/task-details-page.c
	* gui/dialogs/task-page.c
	* gui/dialogs/url-editor-dialog.c: Include e-util-private.h to get
	redefinition of compile-time pathnames as calls to functions on
	Windows. Construct the pathnames of files and directories under
	the installation prefix at run-time to enable install-anywhere on
	Windows. No effect on functionality on Unix.
